dioxus-sugar/tests/classes_compile_failures/list_values.stderr
error: lists are not supported
 --> tests/classes_compile_failures/list_values.rs:3:11
  |
3 | #[classes(list(42, "42"))]
  |           ^^^^^^^^^^^^^^
